--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -10,6 +10,6 @@
 }
 
 .main{
-  padding: 10px 8.6%;
+  padding: 0 8.6%;
   flex-grow: 1;
 }
